# Elixirium_Database

./: .gitignore  README.md
alchdb/: README.md  pyproject.toml
alchdb/alchdb/: add_stuff.py  affix_and_effects.py  backup.py  connect.py  get.py  main.py  modify.py
